@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -148,7 +148,7 @@ final public class Executor {
 
                     if ((outputConsumer != null || Log.isVerbose())
                             || saveOutput) {
-                        savedOutput = br.lines().collect(Collectors.toList());
+                        savedOutput = br.lines().toList();
                     } else {
                         savedOutput = null;
                     }
